# c2526-R5

./: .env.example  .gitignore  README.md  check_minio.py  pyproject.toml  requirements.txt  test_minio.py
docs/: funcionamiento_orquestadores.md
src/: Climate_extraction.py  clima_2024.parquet
src/alertas_oficiales_tiempo_real/: extraccion_historico_2025.py  extract_alertas_oficiales_tiempo_real.py  mta_dataset.csv
src/clima/: Clima_tiempo_real.py  Climate_extraction.py  Extraccion_clima_historico.py  extraccion_historico_clima.py  ingest_clima_historico.py
src/common/: borrar_carpeta_minio.py  minio_client.py
src/eventos/: EventosHistoricoSeatGeek.ipynb  Jambase.py  add_paradas_mongo.py  conciertos.py  conciertos_historico_2025.py  deportes.py  eventos_actual_final.py  eventos_nyc.py  histoticoDeportes.py  ingest_actual_eventos.py  ingest_eventos.py  notebook_eventos_final.ipynb  notebook_paradas_afectadas.ipynb  nycopendataHistorico.py  raw_to_proccesed.py  transform.py  utils_eventos.py
src/gtfs_historico/: historical_gtfs_builder.py  store_gtfs_range.py  transform.py
src/pipelines/: run_extraccion.py  run_transform.py
src/tiempo_real_metro/: notebook_realtime_data.ipynb  realtime_data.py
