[project]
name = "c2526-r5"
version = "0.1.0"
description = "Proyecto de Datos I (Grupo 5) - pipeline y API"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "requests",
  "requests-cache",
  "retry-requests",
  "python-dateutil",
  "python-dotenv",
  "pytz",
  "tzdata",
  "tqdm",
  "openmeteo-requests",
  "gtfs-realtime-bindings",
  "protobuf",
  "minio",
  "fastapi",
  "uvicorn",
  "pydantic",
  "pydantic-settings",
  "pymongo>=4.16.0",
  "rich>=14.3.2",
  "meteostat>=2.1.3",
  "geopy>=2.4.1",
  "matplotlib>=3.10.8",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "pre-commit",
  "ipykernel",
]
